@@ -36,6 +36,7 @@ YOUTRACK
 	Fixed: #IP-1395 Domain redirect feature - Missing URL path separator
 	Fixed: #IP-1396 Deletion of a subdomain which has '/' as mount point deletes all web folders
 	Fixed: #IP-1399 Add Auto-Submitted Header to Autoreply Emails
+	Fixed: #IP-1401 Courier pop3-ssl and imap-ssl don't work with Windows 10
 
 ------------------------------------------------------------------------------------------------------------------------
 1.2.9
